add RangeOperation
